# sundial

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix  original-sundial.sh
.github/workflows/: release.yml
src/: cache.rs  config.rs  main.rs  screen.rs  sun_times.rs
