[package]
name = "sundial"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
directories = "5.0"
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
mockito = "1.2"
